tests/bad/value_enums/constructor_no_args.oc
/// fail: Foo::Case1 needs 2 fields to construct

enum Foo {
    Case0(x: i32)
    Case1(y: str, x: i32)
    Case2(y: str)
    Case3
}

def main() {
    let foo: Foo = Case1
}